# Futilities

./: main.py  pyproject.toml
futilities/: fileutils.py
tests/: test_fileutils.py
